@@ -30,7 +30,8 @@ established a feedback loop that we can use to guide us towards the correct beha
 Quickstart
 ----------
 
-See: :ref:`installation`
+See: :ref:`installation` or ``pip install laboratory``
+
 
 With Laboratory you conduct an experiment with your known-good code as the
 control block and a new code branch as a candidate.
@@ -52,19 +53,23 @@ Let's do an experiment together::
 
 Laboratory just:
 
--  Ran the unproven (candidates) and the existing (control) code
+-  Executed the unproven (candidates) and the existing (control) code
 -  Compared the return values
 -  Recorded timing information about all code
 -  Caught (and logged) exceptions in the unproven code
--  Published all of this information
+-  Published all of this information (see :ref:`publishing`)
 
-.. Note::
+For the most part that's all there is to it. You'll need to do some work to :ref:`publish your results <publishing>`
+in order to act on the experiment, but if you've got a metrics solution ready to go it should be easy.
 
-    By default publish is a no-op. See :ref:`publishing`
+If you need to `control comparison`_, you can do that too.
+
+.. Tip::
+
+    Your control and candidate functions execute in a random order to help catch ordering issues
 
 
-That's it as far as laboratory goes; the time consuming part will be implementing your
-candidates correctly.
+.. _control comparison: https://github.com/joealcorn/laboratory#controlling-comparison
 
 
 Indices and tables
@@ -72,7 +77,3 @@ Indices and tables
 
 * :ref:`genindex`
 * :ref:`search`
-
-
-.. |badge_pypi| image:: https://badge.fury.io/py/laboratory.svg
-   :target: https://pypi.python.org/pypi/laboratory
